# dl-basic

./: pyproject.toml
02/src/: model.py
02/submission/: submission_pred.csv
03/src/: model.py
03/submission/: submission_pred.csv  submission_pred_20250428_163358.csv  submission_pred_20250428_163814.csv  submission_pred_20250428_164144.csv  submission_pred_20250428_170137.csv
04/src/: model.py
04/submission/: submission_pred.csv
05/src/: dataset.py  model.py  train.py  utils.py
